# travel-agentcore

./: .gitignore  Dockerfile  LICENSE  README.md  requirements.txt
01_agent_standalone/: .bedrock_agentcore.example.yaml  README.md  requirements.txt  travel_agent_standalone.py
01_agent_standalone/doc/: travel-agentcore.drawio.xml
02_agent_inbound_authn/: .env.example  Dockerfile  README.md  requirements.txt
02_agent_inbound_authn/client_app/: README.md  app.py
02_agent_inbound_authn/scripts/: deploy_agent.py  invoke_agent.py  user_auth.py
03_host_mcp_server/: .env.example  Dockerfile  README.md  requirements.txt  weather_mcp_server.py
03_host_mcp_server/scripts/: deploy_mcp.py  invoke_mcp.py  user_auth.py
04_agent_calls_mcp/: .env.example  Dockerfile  README.md  mcp_auth_helper.py  travel_agent_calls_mcp.py  weather_mcp.sample.json
04_agent_calls_mcp/client_app/: app.py  auth_helper.py
04_agent_calls_mcp/doc/: demo.webm  screen-capture (1).gif:Zone.Identifier
04_agent_calls_mcp/scripts/: deploy_agent.py  invoke_agent.py  setup_oauth_provider.py  user_auth.py
05_agent_memory/: README.md  pyproject.toml  travel_agent_with_memory.py
NN/tools/weather-mcp/: README.md  mcp_client_remote.py  weather_mcp_server.py
